// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly with custom size, backgroundColor, and iconColor 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#f0f",
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      undefined,
    ]
  }
  testID="container-email-icon"
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#fff",
          "fontSize": 25,
        },
        undefined,
        {
          "fontFamily": "material-community",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    testID="icon-email-icon"
  >
    󰇮
  </Text>
</View>
`;

exports[`Icon renders correctly with default props 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#f0f",
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      undefined,
    ]
  }
  testID="container-email-icon"
>
  <Text />
</View>
`;

exports[`Icon renders multiple icons with distinct testIDs 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#f0f",
          "borderRadius": 25,
          "height": 50,
          "width": 50,
        },
        undefined,
      ]
    }
    testID="container-email-icon"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#fff",
            "fontSize": 25,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon-email-icon"
    >
      󰇮
    </Text>
  </View>,
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#fff",
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        undefined,
      ]
    }
    testID="container-home-icon"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#000",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon-home-icon"
    >
      󰋜
    </Text>
  </View>,
]
`;
